<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">s25rttr</string>
    <string name="shortcut_config_name">Configure</string>
    <string name="config_title_text">Return to the Roots configuration</string>
    <string name="config_rttr_dir_title">RTTR game directory:</string>
    <string name="config_rttr_dir_info">Directory to store gamedata (overlay, settings, logs, saves)</string>
    <string name="config_game_dir_title">Settlers 2 directory:</string>
    <string name="config_game_dir_info">Original Settlers 2 Gold Edition (msdos) installation (DATA, GFX folder). Needed by RTTR to run</string>
    <string name="config_default_name_title">Default name: (set before first startup)</string>
    <string name="config_orientation_title">Orientation:</string>
    <string name="config_log_title" translatable="false">Logs:</string>
    <string name="config_log_delete_button">Delete logs</string>
    <string name="config_game_start_button">Start game/Save settings</string>
    <string name="config_pick_button" translatable="false">Pick</string>
    <string name="config_dialog_permission_title">Permission</string>
    <string name="config_dialog_discard_changes_title">Discard changes?</string>
    <string name="config_dialog_discard_changes_message">You have unsaved changes do you really want to exit without saving?</string>
    <string name="config_dialog_permission_request">This app needs permission to read and write to your filesystem to work. Please allow all file permission in the app system settings</string>
    <string name="config_dialog_info_title" translatable="false">Info</string>
    <string name="config_dialog_exit_dialog">You can access this config by long pressing on the app icon and choosing \"Configure\"</string>
    <string name="config_dialog_s2files_title">Settlers 2 data</string>
    <string name="config_dialog_s2files_message">The chosen directory does not contain a valid Settlers 2 Gold Edition (msdos) installation!</string>
    <string name="config_log_button" translatable="false">Show</string>
    <string name="config_updater_button">Update assets</string>
    <string name="config_enable_updater_checkbox">Enable updater</string>
    <string name="config_updater_info">Update assets in RTTR directory after app update (no internet, recommended)</string>
    <string name="config_orientation_dynamic_landscape">Dynamic landscape (Default)</string>
    <string name="config_orientation_dynamic_portrait">Dynamic portrait</string>
    <string name="config_orientation_landscape">Landscape</string>
    <string name="config_orientation_portrait">Portrait</string>
    <string name="config_orientation_reverse_landscape">Reverse landscape</string>
    <string name="config_orientation_reverse_portrait">Reverse portrait</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_not_show">Do not show again</string>
    <string name="game_dialog_missing_config_title">Missing config</string>
    <string name="game_dialog_missing_config_message">Please ensure all paths in config are set to a valid directory</string>
    <string name="game_dialog_driver_failed_title">Driver failed</string>
    <string name="game_dialog_driver_failed_message">Failed to link drivers in cache directory. Try to clear the app cache. If this happens multiple times please open a bug report on github</string>
    <string name="assets_dialog_dir_not_writable_message">RTTR Game directory is not writable! Please check/save your settings</string>
    <string name="assets_dialog_dir_not_writable_title">Path not writable</string>
    <string name="assets_dialog_searching_title">Searching for updates…</string>
    <string name="assets_dialog_update_ready_title">Update ready</string>
    <string name="assets_dialog_update_message">There are %1$d files ready to update. Do you want to update them? (Manually replaced assets/textures will be overwritten)</string>
    <string name="assets_dialog_updating_title" translatable="false">Updating</string>
    <string name="assets_dialog_updating">Updating game assets…</string>
    <string name="assets_dialog_update_failed_title">Update failed</string>
    <string name="assets_dialog_update_failed_message">An error occurred during the copy process: %1$s</string>
    <string name="assets_dialog_updater_disable_title">Disable updater</string>
    <string name="assets_dialog_updater_disable_message">Do you want to disable the updater? (Can be activated in configuration)</string>
    <string name="assets_dialog_updated_title">Up to date</string>
    <string name="assets_dialog_updated_message">All Return to the Roots Asset files are up to date</string>
    <string name="assets_dialog_copy_failed_title" translatable="false">Assets failed</string>
    <string name="assets_dialog_copy_failed_message">Failed to copy assets to RTTR directory: %1$s</string>
    <string name="assets_dialog_copying_title">Copying assets to RTTR directory…</string>
    <string name="assets_dialog_update_done_title">Update successfully</string>
    <string name="assets_dialog_update_done_message">Return to the Roots assets updated successfully</string>
    <string name="assets_toast_updater_disable">Updater disabled</string>
    <string name="assets_toast_saved_settings">Saved settings</string>
    <string name="config_dialog_generic_error_title">An error occured</string>
    <string name="assets_toast_no_updates">Up to date</string>
    <string name="config_toast_no_selected_log">No log selected</string>
    <string name="config_spinner_logs_not_found">No logs available</string>
    <string name="config_dialog_log_delete_message">Do you really want do delete all logs</string>
    <string name="logview_button_back">Back</string>
    <string name="logview_button_down">Down</string>
    <string name="logview_button_up">Up</string>
    <string name="config_updater_title" translatable="false">Updater:</string>
    <string name="config_overlay_title" translatable="false">Overlay:</string>
    <string name="config_overlay_enable_checkbox">Enable overlay</string>
    <string name="config_overlay_edit_button">Edit overlay</string>
    <string name="overlay_dialog_remove">Remove</string>
    <string name="overlay_config_button_name_hint">Button name</string>
    <string name="overlay_config_action_title">Action:</string>
    <string name="overlay_config_subaction_title">Sub-action:</string>
    <string name="overlay_config_opacity_title">Opacity:</string>
    <string name="overlay_config_textopacity_title">Text opacity:</string>
    <string name="overlay_confg_addbutton_info">Tap to create button</string>
    <string name="overlay_config_menu_addbtn">Add button</string>
    <string name="overlay_config_menu_save">Save config</string>
    <string name="overlay_config_menu_clear">Clear config</string>
    <string name="overlay_config_menu_reset">Reset</string>
    <string name="overlay_config_menu_back">Back</string>
    <string name="overlay_config_width_title">Min. width:</string>
    <string name="overlay_config_height_title">Min. height:</string>
    <string name="overlay_config_orientation_info">Landscape/Portrait will affect this menu</string>
    <string name="overlay_toast_saved">Overlay saved to %1$s</string>
    <string name="overlay_toast_loaded">Overlay loaded from %1$s</string>
    <string name="overlay_config_action_keypress">Keypress</string>
    <string name="overlay_config_action_mouse">Mouse</string>
    <string name="overlay_config_action_overlay" translatable="false">Overlay</string>
    <string name="overlay_config_action_keyboard">Toggle keyboard</string>
    <string name="overlay_config_keyaction_space">SPACE</string>
    <string name="overlay_config_keyaction_enter">RETURN</string>
    <string name="overlay_config_keyaction_escape" translatable="false">ESCAPE</string>
    <string name="overlay_config_keyaction_tab" translatable="false">TAB</string>
    <string name="overlay_config_keyaction_alt" translatable="false">ALT</string>
    <string name="overlay_config_keyaction_ctrl">CTRL</string>
    <string name="overlay_config_overlayaction_edid" translatable="false">EDID</string>
    <string name="overlay_config_overlayaction_toggle" translatable="false">TOGGLE</string>
    <string name="overlay_config_mouseaction_left">LEFT</string>
    <string name="overlay_config_mouseaction_right">RIGHT</string>
    <string name="overlay_config_mouseaction_middle">MIDDLE</string>
    <string name="features_overlay_title">Overlay available now</string>
    <string name="features_overlay_message">This update includes a new overlay system. Create and drag buttons to emulate key, mouse and other events. Long press on the app icon and tap configure then configure the overlay. Thanks for playing :)</string>
    <string name="config_experimental_title">Experimental: (may create bugs)</string>
    <string name="config_experimental_glvsync_title" translatable="false">GL-Vsync</string>
    <string name="config_experimental_glbatch_title" translatable="false">GL-Batch</string>
    <string name="config_experimental_glfb_title" translatable="false">GL-Fb</string>
    <string name="overlay_toast_classnotfound">Failed to load overlay config. Could happen on app update</string>
    <string name="overlay_config_ignorehide_checkbox">Ignore hide request</string>
    <string name="config_dialog_first_choose_rttrdir">Please first create and/or choose an empty/previous folder as RTTR game directory to proceed</string>
</resources>